@@ -6,6 +6,11 @@ try:
 except ImportError:
     from distutils.command.build_py import build_py
 
+try:
+    from distutils.command.build_scripts import build_scripts_2to3 as build_scripts
+except ImportError:
+    from distutils.command.build_scripts import build_scripts
+
 setup(
     name = "test2to3",
     version = "1.0",
@@ -14,5 +19,8 @@ setup(
     author_email = "python-dev@python.org",
     license = "PSF license",
     packages = ["test2to3"],
-    cmdclass = {'build_py':build_py}
+    scripts = ["maintest.py"],
+    cmdclass = {'build_py':build_py,
+                'build_scripts':build_scripts,
+                }
 )
